--- a/build.gradle
+++ b/build.gradle
@@ -218,6 +218,8 @@ project(':ambry-tools') {
                 project(':ambry-frontend')
         compile "net.sf.jopt-simple:jopt-simple:$joptSimpleVersion"
         testCompile project(':ambry-clustermap').sourceSets.test.output
+        testCompile project(':ambry-store').sourceSets.test.output
+        testCompile project(':ambry-utils').sourceSets.test.output
     }
 }
 
