AmbryRequests changes draft

--- a/build.gradle
+++ b/build.gradle
@@ -178,6 +178,7 @@ project(':ambry-server') {
         testCompile project(':ambry-api').sourceSets.test.output
         testCompile project(':ambry-commons').sourceSets.test.output
         testCompile project(':ambry-replication').sourceSets.test.output
+        testCompile project(':ambry-messageformat').sourceSets.test.output
         testCompile "org.bouncycastle:bcpkix-jdk15on:$bouncycastleVersion"
     }
 }
